--- a/ProductsMicroservice/src/main/resources/application.properties
+++ b/ProductsMicroservice/src/main/resources/application.properties
@@ -5,5 +5,5 @@ server.port=0
 
 # Kafka properties
 spring.kafka.producer.bootstrap-servers=localhost:9092,localhost:9094
-spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
